# Multithread-web-rust

./: .gitignore  Cargo.toml  README.md
src/: handlers.rs  main.rs
static/root/: index.html
static/root/css/: example.css  main.css
static/root/js/: example.js
