[package]
name = "t_counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-codec = "0.3"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.5.0"
env_logger = "0.9.0"  
awc = "2"
futures = "0.3.1"
bytes = "0.5.3" 
